[package]
name = "welcome-to-the-clumpiverse"
version = "0.0.1"
authors = ["Undo3D <info@undo3d.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/welcome-to-the-clumpiverse.rs"

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
